# cur_holiday_notification

./: .gitignore  README.md  cspell-words.txt  cur_holiday_notification.cfg  project.code-workspace  start-build-all.bat  start-build-tests.bat  start-test-builds.bat
c_project/: .clang-format  CMakeLists.txt
c_project/src/: main.c
c_project/src/utils/: ini_utils.c  ini_utils.h  xml_utils.c  xml_utils.h
c_project/src/utils/ini/: ini.c  ini_utils.c
c_project/src/utils/ini/ini_h/: ini.h
c_project/src/utils/xml/: xml_utils.c  xml_utils.h
c_project/temp-1/: main.c
go_project/: go.mod  go.sum  main.go
py_project/: cx_setup___main.py  cx_setup_build.py
py_project/src/: main.py
rust_project/: Cargo.toml
rust_project/src/: main.rs
test_xmlfiles/: 0230301-20230331.xml  20231201-20231231.xml  20240201-20240229.xml
zig_project/: build.zig  build.zig.zon  main.zig
